--- a/04-clustered-pingaccess/kustomization.yaml
+++ b/04-clustered-pingaccess/kustomization.yaml
@@ -4,8 +4,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 resources:
 - pingaccess-engine.yaml
 - pingaccess-admin.yaml
-- paadmin-ingress.yaml
-- paengine-egress.yaml
+#- paadmin-ingress.yaml
+#- paengine-egress.yaml
 #- network_policy_all.yaml
 
 generatorOptions:
