--- a/04-clustered-pingaccess/pingaccess-engine.yaml
+++ b/04-clustered-pingaccess/pingaccess-engine.yaml
@@ -7,11 +7,14 @@ metadata:
     tier: engine
 spec:
   ports:
-    - port: 3000
+    - port: 8443
+      targetPort: 3000
       name: https
   selector:
     role: pingaccess
     tier: engine
+  type: LoadBalancer
+
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -35,11 +38,12 @@ spec:
     spec:
       initContainers:
       - name: init
-        image: curlimages/curl:latest
-        command: ['sh', '-c', 'until curl --connect-timeout 1 --silent -k https://pingaccess:9000 ; do echo waiting for admin ; sleep 3 ; done']
+        image: harbor-pks-dev01.server.rbsgrp.net/iamp/curl:latest
+        command: ['sh', '-c', 'until curl --connect-timeout 1 --silent -k https://pingaccess:8443 ; do echo waiting for admin ; sleep 3 ; done']
       containers:
       - name: pingaccess
-        image: pingidentity/pingaccess:5.3.2-edge-rbs
+        image: harbor-pks-dev01.server.rbsgrp.net/iamp/pingaccess:5.3.2-edge-rbs
+        imagePullPolicy: Always
         #image: pingidentity/pingaccess:6.1.0-edge
         #image: pingidentity/pingaccess:edge
         ports:        
@@ -47,8 +51,8 @@ spec:
         envFrom:
         - configMapRef:
             name: pingaccess-engine-environment-variables
-        - secretRef:
-            name: devops-secret
+        #- secretRef:
+        #    name: devops-secret
         readinessProbe:
           exec:
             command:
