updated kustomization file so that it can work with kubectl kustomize command

--- a/04-clustered-pingaccess/kustomization.yaml
+++ b/04-clustered-pingaccess/kustomization.yaml
@@ -13,8 +13,6 @@ generatorOptions:
 
 configMapGenerator:
 - name: pingaccess-engine-environment-variables
-  envs:
-    - env_vars.pingaccess-engine
+  env: env_vars.pingaccess-engine
 - name: pingaccess-admin-environment-variables
-  envs:
-    - env_vars.pingaccess-admin
+  env: env_vars.pingaccess-admin
